frontend tests